--- a/src/app/dashboard/action-plan/action-plan-details/action-plan-details.component.html
+++ b/src/app/dashboard/action-plan/action-plan-details/action-plan-details.component.html
@@ -5,8 +5,7 @@
                 <div class="card">
                     <div class="card-header">
                         <div class="header_card">
-                            <h3 class="card-title">Audit Area Details</h3>
-                            
+                            <h3 class="card-title">Audit Area Details</h3>   
                         </div>
                     </div>
                     <div class="card-body">
@@ -26,7 +25,7 @@
                                         <td>  <button (click)="goToObservation(item.categoryId)" class="btn btn-primary">{{item.observationCount}}</button></td>
                                         
                                     </tr>
-                                    <tr class="tbody_data">
+                                  <!--   <tr class="tbody_data">
                                         <td>C2</td>
                                         <td>Regulation for 
                                             initial production control</td>
@@ -34,98 +33,7 @@
                                             <button (click)="gridView2()" class="btn btn-primary">2</button>
                                         </td>
                                         
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C3</td>
-                                        <td>Changing management</td>
-                                        <td>
-                                            <button class="btn btn-primary">3</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C4</td>
-                                        <td>Changing management</td>
-                                        <td>
-                                            <button class="btn btn-primary">0</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C5</td>
-                                        <td>Changing management</td>
-                                      <td>  <button class="btn btn-primary">1</button></td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C6</td>
-                                        <td>Quality audit and process verification</td>
-                                        <td>
-                                            <button class="btn btn-primary">5</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C7</td>
-                                        <td>Quality audit and process verification</td>
-                                        <td>
-                                            <button (click)="gridView2()" class="btn btn-primary">2</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C8</td>
-                                        <td>Handling abnormality in quality</td>
-                                        <td>
-                                            <button class="btn btn-primary">4</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C9</td>
-                                        <td>Handling abnormality in quality</td>
-                                      <td>  <button class="btn btn-primary">1</button></td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C10</td>
-                                        <td>Equipment/ Inspection equipment's managemen</td>
-                                        <td>
-                                            <button (click)="gridView2()" class="btn btn-primary">2</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C11</td>
-                                        <td>Implementation of standards</td>
-                                        <td>
-                                            <button (click)="gridView2()" class="btn btn-primary">2</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C12</td>
-                                        <td>Products management</td>
-                                        <td>
-                                            <button class="btn btn-primary">8</button>
-                                        </td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C13</td>
-                                        <td>Handling Management</td>
-                                      <td>  <button class="btn btn-primary">1</button></td>
-                                        
-                                    </tr>
-                                    <tr class="tbody_data">
-                                        <td>C14</td>
-                                        <td>Critical parts Management </td>
-                                        <td>
-                                            <button (click)="gridView2()" class="btn btn-primary">2</button>
-                                        </td>
-                                        
-                                    </tr>
-                                   
+                                    </tr> -->
                                 </tbody>
                             </table>
                         </div>
