--- a/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-assign/view-plan-assign.component.html
@@ -17,8 +17,7 @@
                       <th>S.No</th>
                       <th>Assign Auditor</th>
                       <th>Action</th>
-                      </tr>
-                   
+                    </tr>
                   </thead>
                   <tbody>
                     <tr *ngFor="let obje of assignAuditorArray.controls;let i = index;">
@@ -37,79 +36,14 @@
                         </button>
                       </td>
                     </tr>
-                    </tbody>
+                  </tbody>
                 </table>
-                <!-- <table id="example2" class="table table-bordered table-hover">
-                          <thead>
-                            <tr class="now_rap text-center sticky_header">
-                              <th>S.No</th>
-                              <th>Assign Auditor </th>
-                              <th>Select </th>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <tr class="tbody_data">
-                              <td>1</td>
-                              <td>
-                                <select class="form-control">
-                                  <option>Select</option>
-                                  <option>Auditor1 </option>
-                                  <option>Auditor2</option>
-                                  <option>Auditor3 </option>
-                                  <option>Auditor4</option>
-                                  <option>Auditor5 </option>
-                                  <option>Auditor6</option>
-                                </select>
-                              </td>
-                              <td>
-                                <button class="btn btn-success">+</button>
-                                <button class="btn btn-danger">-</button>
-                              </td>
-                            </tr>
-                            <tr class="tbody_data">
-                              <td>1</td>
-                              <td>
-                                <select class="form-control">
-                                  <option>Select</option>
-                                  <option>Auditor1 </option>
-                                  <option>Auditor2</option>
-                                  <option>Auditor3 </option>
-                                  <option>Auditor4</option>
-                                  <option>Auditor5 </option>
-                                  <option>Auditor6</option>
-                                </select>
-                              </td>
-                              <td>
-                                <button class="btn btn-success">+</button>
-                                <button class="btn btn-danger">-</button>
-                              </td>
-                            </tr>
-                            <tr class="tbody_data">
-                              <td>1</td>
-                              <td>
-                                <select class="form-control">
-                                  <option>Select</option>
-                                  <option>Auditor1 </option>
-                                  <option>Auditor2</option>
-                                  <option>Auditor3 </option>
-                                  <option>Auditor4</option>
-                                  <option>Auditor5 </option>
-                                  <option>Auditor6</option>
-                                </select>
-                              </td>
-                              <td>
-                                <button class="btn btn-success">+</button>
-                                <button class="btn btn-danger">-</button>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table> -->
               </div>
             </form>
           </div>
           <div class="card-footer text-right">
             <button type="button" class="btn btn-primary" (click)="assign()">Assign</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="close()">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="close()">Back</button>
           </div>
         </div>
       </div>
