--- a/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-edit/view-plan-edit.component.html
@@ -119,7 +119,7 @@
                         </div>
                         <div class="card-footer" *ngIf="isSuperAdmin">
                             <button class="btn btn-primary" (click)="submit()">Submit</button>
-                            <button class="btn btn-default" (click)="close()">Close</button>
+                            <button class="btn btn-default" (click)="close()">Back</button>
                         </div>
                     </form>
                 </div>
@@ -128,124 +128,3 @@
     </div>
 </section>
 
-<!-- <section class="content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <div class="card" ng-show="myVar1==true">
-                    <div class="card-header">
-                        <div class="header_card">
-                            <h3 class="card-title">View Plan Details</h3>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Vendor Code <span class="start_css">*</span></label>
-                                    <input list="europe-countries" placeholder="Search Vendor Code" class="form-control"
-                                        disabled>
-                                    <datalist id="europe-countries">
-                                        <option>VCNH1231</option>
-                                    </datalist>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Vendor Name <span class="start_css">*</span></label>
-                                    <select class="form-control" disabled>
-                                        <option>Vendor1</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Location <span class="start_css">*</span></label>
-                                    <select class="form-control" disabled>
-                                        <option>Location2</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Any Other location <span
-                                            class="start_css">*</span></label>
-                                    <input type="text" class="form-control" placeholder="XXXXXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Any Other Code <span class="start_css">*</span></label>
-                                    <input type="text" class="form-control" placeholder="XXXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Type Code</label>
-                                    <input type="text" class="form-control" placeholder="XXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Type Name</label>
-                                    <input type="text" class="form-control" placeholder="XXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Type location</label>
-                                    <input type="text" class="form-control" placeholder="XXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Planned Start Date <span
-                                            class="start_css">*</span></label>
-                                    <input type="text" class="form-control inputbox_css" placeholder="XXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Planned End Date <span class="start_css">*</span></label>
-                                    <input type="text" class="form-control inputbox_css" placeholder="XXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">
-                                        Additional MSIL email
-                                    </label>
-                                    <input type="text" class="form-control" ng-model="driverObj.DriverName"
-                                        placeholder="XXXXX" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">
-                                        Auditee email id <span class="start_css">*</span>
-                                    </label>
-                                    <input type="text" class="form-control" ng-model="driverObj.DriverName"
-                                        placeholder="xyz@gmail.com" disabled>
-                                </div>
-                            </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">
-                                        Upload File
-                                    </label>
-                                    <a
-                                        href="http://localhost:64604/index.html#/ViewPlan/">http://localhost:64604/index.html#/ViewPlan/</a>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal"
-                            (click)="Close()">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
