--- a/src/app/dashboard/manage-audit/manage-audit.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit.component.html
@@ -401,6 +401,6 @@
   <div class="card-footer">
 
     <!--<button type="button" class="btn btn-primary" ng-click="Submit()">Submit</button>-->
-    <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="ManageScreenView('Main')">Close</button>
+    <button type="button" class="btn btn-default" (click)="back()">Back</button>
   </div>
 </div>
