--- a/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
+++ b/src/app/dashboard/action-plan/action-plan-observation/action-plan-observation.component.html
@@ -9,7 +9,7 @@
             <table id="" class="table table-bordered table-hover">
                 <thead>
                     <tr class="text-center">
-                        <th colspan="8">Observation(2)</th>
+                        <th colspan="8">Observation({{actionPlanList.length}})</th>
                     </tr>
                     <tr class=" text-center sticky_header fon_9">
                         <th>Observation</th>
@@ -22,23 +22,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tbody_data ">
-                        <td>1</td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>2</td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
-                        <td><textarea class="form-control"></textarea></td>
+                    <tr class="tbody_data" *ngFor="let item of actionPlanList; let i = index;">
+                        <td>{{i+1}}</td>
+                        <td>{{i+1}}</td>
+                        <td>{{i+1}}.1</td>
+                        <td>{{item.remarkOfAuditor}}</td>
+                        <td><textarea [(ngModel)]="item.detailOfImprovement" class="form-control"></textarea></td>
+                        <td><textarea [(ngModel)]="item.incharge" class="form-control"></textarea></td>
+                        <td><input [(ngModel)]="item.dateOfSubmission" type="date"></td>
                     </tr>
                 </tbody>
             </table>
@@ -62,6 +53,6 @@
         </nav>
     </div>
     <div class="card-footer">
-        <button class="btn btn-success">Submit</button>
+        <button (click)="submit()" class="btn btn-success">Submit</button>
         </div>
 </div>
