--- a/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
+++ b/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
@@ -3,7 +3,6 @@
         <div class="header_card">
             <h3 class="card-title">Regulation for initial production control </h3>
             <div class="form-group mb-0 w_26">
-               
                 <select class="form-control filter_css">
                     <option > Select Vendor Name</option>
                     <option >  Vendor1</option>
@@ -17,13 +16,11 @@
         </div>
     </div>
     <div class="card-body">
-       
-           
         <div class="table-responsive max_hei_table" >
             <table id="" class="table table-bordered table-hover">
                 <thead>
                     <tr class="text-center">
-                        <th colspan="10">Observation(2)</th>
+                        <th colspan="10">Observation({{actionPlanList.length}})</th>
                     </tr>
                     <tr class=" text-center sticky_header">
                         <th>Observation</th>
@@ -35,26 +32,27 @@
                         <th>DATE</th>
                         <th>Download</th>
                         <th>Action</th>
-                        <!-- <th>RESULT OF VERIFICATION</th> -->
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tbody_data ">
-                        <td>1</td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
-                        <td><textarea class="form-control">Prefield Data</textarea></td>
+                    <tr class="tbody_data" *ngFor="let item of actionPlanList; let i = index;">
+                        <td>{{i+1}}</td>
+                        <td>{{i+1}}</td>
+                        <td>{{i+1}}.1</td>
+                        <td>{{item.remarkOfAuditor}}</td>
+                        <td>{{item.detailOfImprovement}}</td>
+                        <td>{{item.incharge}}</td>
+                        <td>{{item.dateOfSubmission | date:dateFormat}}</td>
                         <td><a href=""><span class="mr-1">Test Link,</span><span>TestLink</span></a></td>
-                        <td><button class="btn btn-success mr-1" data-toggle="modal" data-target="#exampleModal">Open</button>
-                            <button class="btn btn-danger mr-1">Close</button>
-                            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Partially Close</button></td>
-                        <!-- <td><textarea class="form-control"></textarea></td> -->
-                        
+                        <td><button class="btn btn-success mr-1" data-toggle="modal" data-target="#exampleModal"
+                            (click)="observeAction(1,item.id)">Open</button>
+                           <button class="btn btn-danger  mr-1" data-toggle="modal" data-target="#exampleModal"
+                           (click)="observeAction(3,item.id)">Close</button>
+                           <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                           (click)="observeAction(2,item.id)">Partially Close</button>
+                        </td>
                     </tr>
-                    <tr class="tbody_data">
+     <!--                <tr class="tbody_data">
                         <td>2</td>
                         <td><textarea class="form-control">Prefield Data</textarea></td>
                         <td><textarea class="form-control">Prefield Data</textarea></td>
@@ -63,12 +61,15 @@
                         <td><textarea class="form-control">Prefield Data</textarea></td>
                         <td><textarea class="form-control">Prefield Data</textarea></td>
                         <td><a href=""><span class="mr-1">Test Link,</span><span>TestLink</span></a></td>
-                        <td><button class="btn btn-success mr-1" data-toggle="modal" data-target="#exampleModal">Open</button>
-                            <button class="btn btn-danger mr-1">Close</button>
-                            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Partially Close</button></td>
-                        <!-- <td><textarea class="form-control"></textarea></td> -->
-                        
-                    </tr>
+                        <td>
+                            <button class="btn btn-success mr-1" data-toggle="modal" data-target="#exampleModal"
+                             (click)="observeAction('1')">Open</button>
+                            <button class="btn btn-danger  mr-1" data-toggle="modal" data-target="#exampleModal"
+                            (click)="observeAction('3')">Close</button>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                            (click)="observeAction('2')">Partially Close</button>
+                        </td>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
@@ -95,16 +96,12 @@
     <div class="card-footer">
         <button class="btn btn-success">Submit</button>
         </div>
-    <!-- <div class="card-footer">
-        <button class="btn btn-success">Submit</button>
-        </div> -->
 </div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-         
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -115,8 +112,8 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="save()">Save changes</button>
         </div>
       </div>
     </div>
-  </div>
+</div>
