--- a/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
+++ b/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
@@ -1,310 +1,63 @@
-<div class="card" *ngIf="screen1">
+<div class="card">
     <div class="card-header">
         <div class="header_card">
-            <h3 class="card-title">Audit Area Details</h3>
-            
+            <h3 class="card-title">Regulation for initial production control </h3>
         </div>
     </div>
     <div class="card-body">
         <div class="table-responsive max_hei_table">
             <table id="" class="table table-bordered table-hover">
                 <thead>
+                    <tr class="text-center">
+                        <th colspan="10">Observation({{actionPlanList.length}})</th>
+                    </tr>
                     <tr class=" text-center sticky_header">
-                        <th>S.No</th>
-                        <th>Categories </th>
                         <th>Observation</th>
-                        <th>Submitted</th>
-                        <th>Pending</th>
+                        <th>ITEM NO.</th>
+                        <th>SUB ITEM NO. </th>
+                        <th>DESIRED IMPROVEMENT POINTS</th>
+                        <th>DETAIL OF IMPROVEMENT PLAN</th>
+                        <th>IN-CHARGE</th>
+                        <th>DATE</th>
+                        <th>Upload(Multiple Evidence Can be Uploaded)</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="tbody_data">
-                        <td>C1</td>
-                        <td>Production preparation</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
+                    <tr class="tbody_data" *ngFor="let item of actionPlanList; let i = index;">
+                        <td>{{i+1}}</td>
+                        <td>{{i+1}}</td>
+                        <td>{{i+1}}.1</td>
+                        <td>{{item.desiredImprovementPoints}}</td>
+                        <td>{{item.detailOfImprovement}}</td>
+                        <td>{{item.incharge}}</td>
+                        <td>{{item.dateOfSubmission | date:dateFormat}}</td>
+                        <td><input type="file" id="exampleInputFile" (change)="fileUpload($event)"
+                         class="form-control"  multiple></td>
+                        <td><button class="btn btn-success"  (click)="submit(item)">Submit</button></td>
                     </tr>
-                    <tr class="tbody_data">
-                        <td>C2</td>
-                        <td>Regulation for 
-                            initial production control</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C3</td>
-                        <td>Changing management</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C4</td>
-                        <td>Changing management</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C5</td>
-                        <td>Changing management</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C6</td>
-                        <td>Quality audit and process verification</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C7</td>
-                        <td>Quality audit and process verification</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C8</td>
-                        <td>Handling abnormality in quality</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C9</td>
-                        <td>Handling abnormality in quality</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C10</td>
-                        <td>Equipment/ Inspection equipment's managemen</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C11</td>
-                        <td>Implementation of standards</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C12</td>
-                        <td>Products management</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C13</td>
-                        <td>Handling Management</td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                    <tr class="tbody_data">
-                        <td>C14</td>
-                        <td>Critical parts Management </td>
-                        <td>
-                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-success" (click)="evisubmmi()">1</button>
-                        </td>
-                        <td>
-                            <button  class="btn btn-secondary" (click)="evisubmmi()">1</button>
-                        </td>
-                        
-                    </tr>
-                   
                 </tbody>
             </table>
         </div>
-        </div>
-        </div>
-
-
-        <div class="card" *ngIf="screen2">
-            <div class="card-header">
-                <div class="header_card">
-                    <h3 class="card-title">Regulation for initial production control </h3>
-                    
-                </div>
-            </div>
-            <div class="card-body">
-               
-                   
-                <div class="table-responsive max_hei_table" >
-                    <table id="" class="table table-bordered table-hover">
-                        <thead>
-                            <tr class="text-center">
-                                <th colspan="10">Observation(2)</th>
-                            </tr>
-                            <tr class=" text-center sticky_header">
-                                <th>Observation</th>
-                                <th>ITEM NO.</th>
-                                <th>SUB ITEM NO. </th>
-                                <th>DESIRED IMPROVEMENT POINTS</th>
-                                <th>DETAIL OF IMPROVEMENT PLAN</th>
-                                <th>IN-CHARGE</th>
-                                <th>DATE</th>
-                                <th>Upload(Multiple Evidence Can be Uploaded)</th>
-                                <th>Action</th>
-                                <!-- <th>RESULT OF VERIFICATION</th> -->
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr class="tbody_data ">
-                                <td>1</td>
-                                <td><textarea class="form-control">Prefield Data</textarea></td>
-                                <td><textarea class="form-control">Prefield Data</textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><input type="file" id="exampleInputFile" class="form-control"></td>
-                                <td><button class="btn btn-success">Submit</button></td>
-                                <!-- <td><textarea class="form-control"></textarea></td> -->
-                                
-                            </tr>
-                            <tr class="tbody_data">
-                                <td>2</td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><textarea class="form-control"></textarea></td>
-                                <td><input type="file" id="exampleInputFile" class="form-control"></td>
-                                <td><button class="btn btn-success">Submit</button></td>
-                                <!-- <td><textarea class="form-control"></textarea></td> -->
-                                
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination justift_end">
-                        <li class="page-item">
-                            <a class="page-link"  aria-label="Previous">
-                                <span aria-hidden="true">&laquo;</span>
-                            </a>
-                        </li>
-                        <li class="page-item"><a class="page-link" >1</a></li>
-                        <li class="page-item"><a class="page-link" >2</a></li>
-                        <li class="page-item"><a class="page-link" >3</a></li>
-                        <li class="page-item">
-                            <a class="page-link"  aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                            </a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="card-footer">
-                <button class="btn btn-default" (click)="back()">Close</button>
-                </div>
-            <!-- <div class="card-footer">
-                <button class="btn btn-success">Submit</button>
-                </div> -->
-        </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justift_end">
+                <li class="page-item">
+                    <a class="page-link" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item"><a class="page-link">1</a></li>
+                <li class="page-item"><a class="page-link">2</a></li>
+                <li class="page-item"><a class="page-link">3</a></li>
+                <li class="page-item">
+                    <a class="page-link" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="card-footer">
+        <button class="btn btn-default" (click)="back()">Back</button>
+    </div>
+</div>
