--- a/src/app/dashboard/masters/audit-area/audit-area-edit/audit-area-edit.component.html
+++ b/src/app/dashboard/masters/audit-area/audit-area-edit/audit-area-edit.component.html
@@ -29,7 +29,7 @@
                         </div>
                         <div class="card-footer">
                             <button type="button" (click)="save()" class="btn btn-primary">Save</button>
-                            <button type="button" (click)="close()" class="btn btn-default">Close</button>
+                            <button type="button" (click)="close()" class="btn btn-default">Back</button>
                         </div>
                     </form>
                 </div>
