--- a/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
+++ b/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
@@ -38,12 +38,12 @@
                     </div>
                     <div class="d-flex">
                     <input type="checkbox">
-<p class="ml-1 mb-0">Critical Observation</p>
-</div>
+                  <p class="ml-1 mb-0">Critical Observation</p>
+                  </div>
                   </div>
                   <div class="card-footer">
                     <button type="button" (click)="save()" class="btn btn-primary">Save</button>
-                    <button type="button" (click)="close()" class="btn btn-default">Close</button>
+                    <button type="button" (click)="close()" class="btn btn-default">Back</button>
                   </div>
                 </form>
               </div>
