--- a/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
+++ b/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
@@ -25,9 +25,9 @@
                   </thead>
                   <tr *ngFor="let item of employeeObj;let i =index;">
                     <td>{{i+1}}</td>
-                    <td>{{item.name}}</td>
+                    <td>{{item.userName}}</td>
                     <td>{{item.code}}</td>
-                    <td>{{item.roleId}}</td>
+                    <td>{{item.name}}</td>
                     <td>12-2-2022</td>
                     <td *ngIf="isSuperAdmin">
                       <div class="d-flex">
