--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -109,6 +109,7 @@
                       <th >Status </th>          
                       <th> Action Plan</th>    
                       <th >Evidences Recieved</th>
+                      <th> Log</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -128,6 +129,9 @@
                       </td>
                       <td *ngIf="isSuperAdmin || isPlanner">   <a *ngIf="isSuperAdmin" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a></td>
                       <td><p [ngClass]="item.status" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.status}} </p></td>
+                      <td><button class="btn btn-primary" (click)="pendingAction()" data-toggle="tooltip" data-placement="top" title="Tooltip on top" >To be Received</button></td>
+                      <td (click)="closure1()" data-toggle="tooltip" data-placement="top" title="Tooltip on top">20%</td>
+                      <td>  <button type="button" class="form-control mr-1 btn btn-secondary" data-toggle="modal" data-target="#exampleModal"><span>Auditor Log</span></button></td>
                       <td><button class="btn btn-primary" (click)="pendingAction(item)" data-toggle="tooltip" data-placement="top" title="Tooltip on top" >
                         {{item.actionPlanStatus}}</button></td>
                       <td (click)="evidence(item.id)" data-toggle="tooltip" data-placement="top" title="Tooltip on top">20%</td>
