--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,23 +8,14 @@
           <div class="card-header">
             <div class="header_card">
               <h3 class="card-title">Dashboard</h3>
-              <div class="form-group mb-0 w_20">
-                
-                <select class="form-control">
-                  <option>Select Year</option>
-                <option>2019</option>
-                <option>2021</option>
-                <option>2022</option>
-               
-                </select>
-                </div>
+            
              
             </div>
           </div>
           <!-- /.card-header -->
-          <div class="card-body">
+          <div class="card-body"  *ngIf="!isVendor">
           
-<div class="d-flex justify-content-center mb-4 flex_direction_media">
+<!-- <div class="d-flex justify-content-center mb-4 flex_direction_media">
   <a href="" class="child_counter ">
     <div class="">
       <div class="d-flex justify-content-between align-items-center">
@@ -73,176 +64,23 @@
       </div>
     </div>
   </a>
-</div>
-
-<div class="row mb-4">
-  <div class="col-sm-2 col_20">
-    <div class="form-group mb-0">
-      <label>From Date</label>
-      <input type="date" class="form-control">
-      
-    
-      </div>
-  </div><!--colend-->
-  <div class="col-sm-2 col_20">
-    <div class="form-group mb-0">
-      <label>To Date</label>
-      <input type="date" class="form-control">
-      
-    
-      </div>
-  </div><!--colend-->
-  <div class="col-sm-2 col_20">
-    <div class="form-group mb-0">
-      <label>Vendor Name</label>
-      <select class="form-control">
-        <option>Select Vendor Name</option>
-      <option></option>
-      <option></option>
-      <option></option>
-     
-      </select>
-      </div>
-    </div><!--colend-->
-    <div class="col-sm-2 col_20">
-      <div class="form-group mb-0">
-        <label>Vendor Code</label>
-        <select class="form-control">
-          <option>Select Vendor Code</option>
-        <option></option>
-        <option></option>
-        <option></option>
-       
-        </select>
-        </div>
-    </div><!--colend-->
-    <div class="col-sm-2 col_20">
-      <div class="form-group mb-0">
-        <label>Location</label>
-        <select class="form-control">
-          <option>Select Location</option>
-        <option></option>
-        <option></option>
-        <option></option>
-       
-        </select>
-        </div>
-    </div><!--colend-->
-  
-    <div class="col-sm-2 col_20 mt_35">
-      <button class="btn btn-primary w_60">Search</button>
-    </div><!--colend-->
-
-  </div><!--row end-->
-  
-
-<div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-header border-0">
-        <div class="d-flex justify-content-between">
-          <h3 class="card-title">Total number of Audit</h3>
-         
-        </div>
-      </div>
-      <div class="card-body">
-      <div class="">
-        <img src="../../assets/img/bar.png" class="w_100 he_bar">
-        </div>
-      </div>
-    </div>
-    <!-- /.card -->
-</div>
-<div class="col-sm-6">
-    
-  <div class="card">
-    <div class="card-header border-0">
-      <div class="d-flex justify-content-between">
-        <h3 class="card-title">Total Number of scroe</h3>
-       
-      </div>
-    </div>
-    <div class="card-body">
-      <div class="row">
-      <div class="col-sm-12">
-    
-      <img src="../../assets/img/bar1.png" class="w_100 he_bar">
-      </div>
-    
-    </div>
-    </div>
-  </div>
-  </div>
-<!-- <div class="col-sm-6">
-  <div class="card">
-    <div class="card-header border-0">
-      <div class="d-flex justify-content-between">
-        <h3 class="card-title">Audit Calender</h3>
-       
-      </div>
-    </div>
-    <div class="card-body">
-    <div class="">
-      <img src="../../assets/img/calender.png" class="w_100">
-      </div>
-    </div>
-  </div>
-  
 </div> -->
-  </div>
+<div class="row">
+  <div class="col-sm-8">
+    <canvas baseChart [data]="actionPlanData" height="100%" [type]="'bar'" [options]="actionPlanOptions">
+    </canvas>
+    </div>
+  <div class="col-sm-4">
+    <canvas baseChart [data]="pieChartData" [type]="'pie'" [options]="pieChartOptions">
+    </canvas>
+</div>
+<div class="col-sm-4">
+  <canvas baseChart [data]="pieChartData1" [type]="'pie'" [options]="pieChartOptions1">
+  </canvas>
+</div>
 
-  <div class="row">
-   
-      <div class="col-sm-6">
-    
-        <div class="card">
-          <div class="card-header border-0">
-            <div class="d-flex justify-content-between">
-              <h3 class="card-title">Audit Report</h3>
-             
-            </div>
-          </div>
-          <div class="card-body">
-            <div class="row">
-         
-            <div class="col-sm-12">
-              <table class="table table-bordered">
-                <thead>
-                  <tr>
-                    <th scope="col">S.No</th>
-                    <th scope="col">Vendor Name</th>
-                    <th scope="col">Auditor</th>
-                    <th scope="col">Starting Date</th>
-                    <th>Average Score</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Vendor 1</td>
-                    <td>Auditor 1</td>
-                    <td>12-2-2022</td>
-                    <td>20%</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Vendor 1</td>
-                    <td>Auditor 1</td>
-                    <td>12-2-2022</td>
-                    <td>60%</td>
-                  </tr>
-                 
-                </tbody>
-              </table>
-              </div>
-          </div>
-          </div>
-        </div>
-        </div>
-      <!-- /.card -->
-   
-   
-    </div><!--row-->
+</div>
+
 
           </div>
           <!-- /.card-body -->
@@ -254,3 +92,42 @@
     </div>
    
   </div>
+
+
+  <script>
+    const ctx = document.getElementById('myChart');
+    const myChart = new Chart(ctx, {
+        type: 'bar',
+        data: {
+            labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+            datasets: [{
+                label: '# of Votes',
+                data: [12, 19, 3, 5, 2, 3],
+                backgroundColor: [
+                    'rgba(255, 99, 132, 0.2)',
+                    'rgba(54, 162, 235, 0.2)',
+                    'rgba(255, 206, 86, 0.2)',
+                    'rgba(75, 192, 192, 0.2)',
+                    'rgba(153, 102, 255, 0.2)',
+                    'rgba(255, 159, 64, 0.2)'
+                ],
+                borderColor: [
+                    'rgba(255, 99, 132, 1)',
+                    'rgba(54, 162, 235, 1)',
+                    'rgba(255, 206, 86, 1)',
+                    'rgba(75, 192, 192, 1)',
+                    'rgba(153, 102, 255, 1)',
+                    'rgba(255, 159, 64, 1)'
+                ],
+                borderWidth: 1
+            }]
+        },
+        options: {
+            scales: {
+                y: {
+                    beginAtZero: true
+                }
+            }
+        }
+    });
+    </script>
