commit after dashboard changes

--- a/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
+++ b/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
@@ -48,7 +48,7 @@
                             (click)="observeAction(1,item.id)">Open</button>
                            <button class="btn btn-danger  mr-1" data-toggle="modal" data-target="#exampleModal"
                            (click)="observeAction(3,item.id)">Close</button>
-                           <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"
+                           <button class="btn btn-primary" style="color: #fff;"data-toggle="modal" data-target="#exampleModal"
                            (click)="observeAction(2,item.id)">Partially Close</button>
                         </td>
                     </tr>
@@ -101,11 +101,11 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <div class="modal-header">
+        <!-- <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-        </div>
+        </div> -->
         <div class="modal-body">
             <label>Remarks</label>
             <textarea class="form-control" rows="3" placeholder="Enter ..."></textarea>
